Scrollbar fix

--- a/themes/horizontal_layout.css
+++ b/themes/horizontal_layout.css
@@ -331,6 +331,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 *::-webkit-scrollbar {
+	height: 12px;
     width: 12px;
 }
 
